--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "author": "Caio Rodrigues <@rfcaio>",
-  "name": "react-boilerplate",
+  "author": {
+    "email": "rfcaio90@gmail.com",
+    "name": "Caio Rodrigues Fernandes",
+    "url": "https://github.com/rfcaio"
+  },
+  "dependencies": {},
+  "description": "A basic boilerplate for React projects.",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.1.4"
+    "@babel/core": "7.4.4",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/preset-env": "7.4.4",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.5",
+    "css-loader": "1.0.0",
+    "file-loader": "2.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "style-loader": "0.23.1",
+    "webpack": "4.30.0",
+    "webpack-cli": "3.3.2",
+    "webpack-dev-server": "3.3.1",
+    "webpack-merge": "4.2.1"
+  },
+  "homepage": "https://github.com/rfcaio/react-boilerplate#readme",
+  "license": "MIT",
+  "name": "react-boilerplate",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rfcaio/react-boilerplate.git"
   },
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.js"
-  }
+  },
+  "version": "1.0.0"
 }
