--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "name": "Caio Rodrigues Fernandes",
     "url": "https://github.com/rfcaio"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
+  },
   "description": "A basic boilerplate for React projects.",
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -15,8 +18,6 @@
     "css-loader": "1.0.0",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
     "style-loader": "0.23.1",
     "webpack": "4.30.0",
     "webpack-cli": "3.3.2",
@@ -32,7 +33,7 @@
     "url": "https://github.com/rfcaio/react-boilerplate.git"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.js"
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "version": "1.0.0"
 }
