--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.0",
+    "dotenv": "8.1.0",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "0.23.1",
