--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "8.0.5",
     "css-loader": "1.0.0",
     "dotenv": "8.1.0",
+    "error-overlay-webpack-plugin": "0.4.1",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "0.23.1",
